--- a/office-task/public/index.html
+++ b/office-task/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>LWR | Learn with Rony</title>
+  <title>Thepostman24 | Online News </title>
 </head>
 
 <body>
